Creat rutas de  home y producto, agregar foter y header con dropdown menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,12 @@
- 
+<app-header></app-header>
+
  
   <!-- <app-ingreso></app-ingreso>
 
 <app-registro></app-registro>  -->
 
 <router-outlet></router-outlet>
+
+<!-- <app-products></app-products> -->
+
+<app-footer></app-footer>
