Cambiar nombres de las paginas de español a inglés, y rederizar rutas de las páginas

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -6,10 +6,9 @@
         <!-- Section: CTA -->
         <section class="">
           <p class="d-flex justify-content-center align-items-center">
-            <span class="me-3">Registrate </span> &nbsp;
-            <button type="button" class="btn btn-outline-light btn-rounded">
-              Sign up!
-            </button>
+            <span class="me-3">Register: </span> &nbsp;
+                <a class="button"
+            routerLink="register">Sign up</a>
           </p>
         </section>
         <!-- Section: CTA -->
