--- a/src/app/security/register/register.component.html
+++ b/src/app/security/register/register.component.html
@@ -8,7 +8,7 @@
             <div class="card-body p-4">
               <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
-              <form>
+              <form (ngSubmit)="signUp(f)" #f="ngForm">
 
                 <div class="form-outline mb-4">
                   <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
@@ -16,18 +16,18 @@
                 </div>
 
                 <div class="form-outline mb-4">
-                  <input type="email" id="form3Example3cg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example3cg">Your Email</label>
+                  <input type="email" id="form3Example3cg" class="form-control form-control-lg" placeholder="Email" [(ngModel)]="user.email" name="email" />
+                  <label class="form-label" for="form3Example3cg" >Your Email</label>
                 </div>
 
                 <div class="form-outline mb-4">
-                  <input type="password" id="form3Example4cg" class="form-control form-control-lg" />
+                  <input type="password" id="form3Example4cg" class="form-control form-control-lg" placeholder="Password" [(ngModel)]="user.password" name="password"/>
                   <label class="form-label" for="form3Example4cg">Password</label>
                 </div>
 
                 <div class="form-outline mb-4">
-                  <input type="password" id="form3Example4cdg" class="form-control form-control-lg" />
-                  <label class="form-label" for="form3Example4cdg">Repeat your password</label>
+                  <input type="password" id="passwordVerification" class="form-control form-control-lg" placeholder="Repeat the password" [(ngModel)]="passwordVerification" name="passwordVerification" />
+                  <label class="form-label" for="passwordVerification">Repeat your password</label>
                 </div>
 
                 <div class="form-check d-flex justify-content-left mb-5">
@@ -38,7 +38,7 @@
                 </div>
 
                 <div class="d-flex justify-content-center">
-                  <button type="button"
+                  <button class="button login__submit" type="submit"
                     class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
                 </div>
 
